@@ -16,6 +16,7 @@ import us.dot.its.jpo.ode.api.mappers.RsuInfoMapper;
 import us.dot.its.jpo.ode.api.mappers.RsuPatchMapper;
 import us.dot.its.jpo.ode.api.models.devices.management.ModifyRsuAllowedSelections;
 import us.dot.its.jpo.ode.api.models.devices.management.RsuPatch;
+import us.dot.its.jpo.ode.api.models.keycloak.CvManagerAuthToken;
 import us.dot.its.jpo.ode.api.models.postgres.dtos.RsuInfoDto;
 import us.dot.its.jpo.ode.api.models.SimplePosition;
 import us.dot.its.jpo.ode.api.models.postgres.tables.Organization;
@@ -33,23 +34,22 @@ import us.dot.its.jpo.ode.api.repositories.RsuCredentialRepository;
 import us.dot.its.jpo.ode.api.repositories.RsuIntersectionRepository;
 import us.dot.its.jpo.ode.api.repositories.RsuOrganizationRepository;
 import us.dot.its.jpo.ode.api.repositories.RsuModelRepository;
+import us.dot.its.jpo.ode.api.repositories.RsuOptionRepository;
 import us.dot.its.jpo.ode.api.repositories.RsuRepository;
 import us.dot.its.jpo.ode.api.repositories.ScmsHealthRepository;
 import us.dot.its.jpo.ode.api.repositories.SnmpCredentialRepository;
 import us.dot.its.jpo.ode.api.repositories.SnmpMsgfwdConfigRepository;
 import us.dot.its.jpo.ode.api.repositories.SnmpProtocolRepository;
-import us.dot.its.jpo.ode.api.repositories.UserRepository;
 
 import java.net.InetAddress;
 import java.net.UnknownHostException;
-import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
@@ -87,6 +87,9 @@ class RsuManagementServiceTest {
     private RsuRepository rsuRepository;
 
     @Mock
+    private RsuOptionRepository rsuOptionRepository;
+
+    @Mock
     private ScmsHealthRepository scmsHealthRepository;
 
     @Mock
@@ -99,13 +102,13 @@ class RsuManagementServiceTest {
     private SnmpProtocolRepository snmpProtocolRepository;
 
     @Mock
-    private UserRepository userRepository;
-
-    @Mock
     private RsuInfoMapper rsuMapper;
 
     @Mock
     private RsuPatchMapper rsuPatchMapper;
+
+    @Mock
+    private CvManagerAuthToken authToken;
 
     @InjectMocks
     private RsuManagementService rsuManagementService;
@@ -129,7 +132,9 @@ class RsuManagementServiceTest {
                 "ssh-group",
                 "snmp-group",
                 "v3",
-                Arrays.asList("Org1", "Org2"));
+                Arrays.asList("Org1", "Org2"),
+                Boolean.TRUE,
+                Boolean.TRUE);
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(mockRsu);
         when(rsuMapper.toDto(mockRsu)).thenReturn(mockDto);
@@ -163,7 +168,7 @@ class RsuManagementServiceTest {
         String invalidIpAddress = "invalid-ip";
 
         ResponseStatusException exception = assertThrows(
-                        ResponseStatusException.class,
+                ResponseStatusException.class,
                 () -> rsuManagementService.getRsuInfo(invalidIpAddress));
 
         assertTrue(exception.getMessage().contains("Invalid IP address"));
@@ -176,6 +181,7 @@ class RsuManagementServiceTest {
     @Test
     void testGetAllRsuInfo_Success() {
         String orgName = "TestOrg";
+        String search = "Search Term";
         Pageable pageable = PageRequest.of(0, 10);
 
         Rsu rsu1 = new Rsu();
@@ -194,7 +200,9 @@ class RsuManagementServiceTest {
                 "ssh1",
                 "snmp1",
                 "v3",
-                Arrays.asList("TestOrg"));
+                Arrays.asList("TestOrg"),
+                Boolean.TRUE,
+                Boolean.TRUE);
         RsuInfoDto dto2 = new RsuInfoDto(
                 "192.168.1.101",
                 new SimplePosition(39.7400, -105.0850),
@@ -206,37 +214,40 @@ class RsuManagementServiceTest {
                 "ssh2",
                 "snmp2",
                 "v2c",
-                Arrays.asList("TestOrg"));
+                Arrays.asList("TestOrg"),
+                Boolean.TRUE,
+                Boolean.TRUE);
 
-        when(rsuRepository.findAllByOrganization(orgName, pageable)).thenReturn(rsuPage);
+        when(rsuRepository.findAllByOrganization(orgName, search, pageable)).thenReturn(rsuPage);
         when(rsuMapper.toDto(rsu1)).thenReturn(dto1);
         when(rsuMapper.toDto(rsu2)).thenReturn(dto2);
 
-        Page<RsuInfoDto> result = rsuManagementService.getAllRsuInfo(orgName, pageable);
+        Page<RsuInfoDto> result = rsuManagementService.getAllRsuInfo(orgName, search, pageable);
 
         assertNotNull(result);
         assertEquals(2, result.getTotalElements());
         assertEquals(2, result.getContent().size());
         assertEquals("192.168.1.100", result.getContent().get(0).getIpv4Address());
         assertEquals("192.168.1.101", result.getContent().get(1).getIpv4Address());
-        verify(rsuRepository).findAllByOrganization(orgName, pageable);
+        verify(rsuRepository).findAllByOrganization(orgName, search, pageable);
         verify(rsuMapper, times(2)).toDto(any(Rsu.class));
     }
 
     @Test
     void testGetAllRsuInfo_EmptyResult() {
         String orgName = "EmptyOrg";
+        String search = "Search Term";
         Pageable pageable = PageRequest.of(0, 10);
         Page<Rsu> emptyPage = new PageImpl<>(List.of(), pageable, 0);
 
-        when(rsuRepository.findAllByOrganization(orgName, pageable)).thenReturn(emptyPage);
+        when(rsuRepository.findAllByOrganization(orgName, search, pageable)).thenReturn(emptyPage);
 
-        Page<RsuInfoDto> result = rsuManagementService.getAllRsuInfo(orgName, pageable);
+        Page<RsuInfoDto> result = rsuManagementService.getAllRsuInfo(orgName, search, pageable);
 
         assertNotNull(result);
         assertEquals(0, result.getTotalElements());
         assertTrue(result.getContent().isEmpty());
-        verify(rsuRepository).findAllByOrganization(orgName, pageable);
+        verify(rsuRepository).findAllByOrganization(orgName, search, pageable);
         verify(rsuMapper, never()).toDto(any());
     }
 
@@ -244,7 +255,6 @@ class RsuManagementServiceTest {
 
     @Test
     void testGetAllowedSelections_Success() {
-        String username = "testuser@example.com";
 
         List<String> primaryRoutes = Arrays.asList("I-25", "I-70", "US-36");
 
@@ -256,18 +266,14 @@ class RsuManagementServiceTest {
         List<String> snmpCredentials = Arrays.asList("snmp-group-1", "snmp-group-2");
         List<String> snmpVersions = Arrays.asList("v2c", "v3");
 
-        List<UserRepository.UserOrgRoleProjection> userOrgRoles = Arrays.asList(
-                createUserOrgRoleProjection("testuser@example.com", "Org1", "Admin"),
-                createUserOrgRoleProjection("testuser@example.com", "Org2", "User"));
-
         when(rsuRepository.findAllPrimaryRoutes()).thenReturn(primaryRoutes);
         when(rsuRepository.findAllRsuModels()).thenReturn(rsuModels);
         when(rsuCredentialRepository.findAllNicknames()).thenReturn(sshCredentials);
         when(snmpCredentialRepository.findAllNicknames()).thenReturn(snmpCredentials);
         when(snmpProtocolRepository.findAllNicknames()).thenReturn(snmpVersions);
-        when(userRepository.findUserOrgRoles(username)).thenReturn(userOrgRoles);
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(Arrays.asList("Org1", "Org2"));
 
-        ModifyRsuAllowedSelections result = rsuManagementService.getAllowedSelections(username);
+        ModifyRsuAllowedSelections result = rsuManagementService.getAllowedSelections(authToken);
 
         assertNotNull(result);
 
@@ -296,21 +302,19 @@ class RsuManagementServiceTest {
         verify(rsuCredentialRepository).findAllNicknames();
         verify(snmpCredentialRepository).findAllNicknames();
         verify(snmpProtocolRepository).findAllNicknames();
-        verify(userRepository).findUserOrgRoles(username);
     }
 
     @Test
     void testGetAllowedSelections_EmptyResults() {
-        String username = "newuser@example.com";
 
         when(rsuRepository.findAllPrimaryRoutes()).thenReturn(List.of());
         when(rsuRepository.findAllRsuModels()).thenReturn(List.of());
         when(rsuCredentialRepository.findAllNicknames()).thenReturn(List.of());
         when(snmpCredentialRepository.findAllNicknames()).thenReturn(List.of());
         when(snmpProtocolRepository.findAllNicknames()).thenReturn(List.of());
-        when(userRepository.findUserOrgRoles(username)).thenReturn(List.of());
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(List.of());
 
-        ModifyRsuAllowedSelections result = rsuManagementService.getAllowedSelections(username);
+        ModifyRsuAllowedSelections result = rsuManagementService.getAllowedSelections(authToken);
 
         assertNotNull(result);
         assertTrue(result.getPrimaryRoutes().isEmpty());
@@ -327,7 +331,6 @@ class RsuManagementServiceTest {
     void testModifyRsu_Success() throws UnknownHostException {
         String rsuIp = "192.168.1.100";
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
-        String username = "testuser@example.com";
 
         RsuPatch patch = new RsuPatch();
         patch.setMilepost(150.0);
@@ -337,7 +340,7 @@ class RsuManagementServiceTest {
         existingRsu.setIpv4Address(inetAddress);
         existingRsu.setMilepost(123.4);
         existingRsu.setPrimaryRoute("I-25");
-        existingRsu.setRsuOrganizations(new ArrayList<>());
+        existingRsu.setRsuOrganizations(new HashSet<>());
 
         RsuInfoDto expectedDto = new RsuInfoDto(
                 rsuIp,
@@ -350,15 +353,17 @@ class RsuManagementServiceTest {
                 "ssh-group",
                 "snmp-group",
                 "v3",
-                Arrays.asList("Org1"));
+                Arrays.asList("Org1"),
+                Boolean.TRUE,
+                Boolean.TRUE);
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
         doNothing().when(rsuPatchMapper).updateRsuFromPatch(patch, existingRsu);
         when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
         when(rsuMapper.toDto(existingRsu)).thenReturn(expectedDto);
-        when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(List.of("Org1"));
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(List.of("Org1"));
 
-        RsuInfoDto result = rsuManagementService.modifyRsu(rsuIp, patch, username);
+        RsuInfoDto result = rsuManagementService.modifyRsu(rsuIp, patch, authToken);
 
         assertNotNull(result);
         assertEquals(150.0, result.getMilepost());
@@ -373,14 +378,13 @@ class RsuManagementServiceTest {
     void testModifyRsu_WithModelUpdate() throws UnknownHostException {
         String rsuIp = "192.168.1.100";
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
-        String username = "testuser@example.com";
 
         RsuPatch patch = new RsuPatch();
         patch.setModel("Yunex RSU-2X");
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new ArrayList<>());
+        existingRsu.setRsuOrganizations(new HashSet<>());
 
         RsuModel newModel = new RsuModel();
         newModel.setName("RSU-2X");
@@ -390,9 +394,9 @@ class RsuManagementServiceTest {
                 .thenReturn(Optional.of(newModel));
         when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
         when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-        when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(List.of("Org1"));
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(List.of("Org1"));
 
-        rsuManagementService.modifyRsu(rsuIp, patch, username);
+        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
 
         verify(rsuModelRepository).findByNameAndManufacturerName("RSU-2X", "Yunex");
         verify(rsuRepository).save(existingRsu);
@@ -402,7 +406,6 @@ class RsuManagementServiceTest {
     void testModifyRsu_WithCredentialUpdates() throws UnknownHostException {
         String rsuIp = "192.168.1.100";
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
-        String username = "testuser@example.com";
 
         RsuPatch patch = new RsuPatch();
         patch.setSshCredentialGroup("ssh-group-new");
@@ -411,7 +414,7 @@ class RsuManagementServiceTest {
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new ArrayList<>());
+        existingRsu.setRsuOrganizations(new HashSet<>());
 
         RsuCredential sshCred = new RsuCredential();
         SnmpCredential snmpCred = new SnmpCredential();
@@ -423,9 +426,9 @@ class RsuManagementServiceTest {
         when(snmpProtocolRepository.findByNickname("v3")).thenReturn(Optional.of(snmpProtocol));
         when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
         when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-        when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(List.of("Org1"));
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(List.of("Org1"));
 
-        rsuManagementService.modifyRsu(rsuIp, patch, username);
+        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
 
         verify(rsuCredentialRepository).findByNickname("ssh-group-new");
         verify(snmpCredentialRepository).findByNickname("snmp-group-new");
@@ -437,13 +440,12 @@ class RsuManagementServiceTest {
         String rsuIp = "192.168.1.123";
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
         RsuPatch patch = new RsuPatch();
-        String username = "testuser@example.com";
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(null);
 
         ResponseStatusException exception = assertThrows(
                 ResponseStatusException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, username));
+                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
 
         assertTrue(exception.getMessage().contains("RSU not found"));
         verify(rsuRepository, never()).save(any());
@@ -453,11 +455,10 @@ class RsuManagementServiceTest {
     void testModifyRsu_InvalidIpAddress() {
         String invalidIp = "invalid-ip";
         RsuPatch patch = new RsuPatch();
-        String username = "testuser@example.com";
 
         ResponseStatusException exception = assertThrows(
                 ResponseStatusException.class,
-                () -> rsuManagementService.modifyRsu(invalidIp, patch, username));
+                () -> rsuManagementService.modifyRsu(invalidIp, patch, authToken));
 
         assertTrue(exception.getMessage().contains("Invalid IP address"));
         verify(rsuRepository, never()).save(any());
@@ -467,13 +468,12 @@ class RsuManagementServiceTest {
     void testModifyRsu_ModelNotFound() throws UnknownHostException {
         String rsuIp = "192.168.1.100";
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
-        String username = "testuser@example.com";
 
         RsuPatch patch = new RsuPatch();
         patch.setModel("Unknown Model");
 
         Rsu existingRsu = new Rsu();
-        existingRsu.setRsuOrganizations(new ArrayList<>());
+        existingRsu.setRsuOrganizations(new HashSet<>());
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
         when(rsuModelRepository.findByNameAndManufacturerName(anyString(), anyString()))
@@ -481,7 +481,7 @@ class RsuManagementServiceTest {
 
         ResponseStatusException exception = assertThrows(
                 ResponseStatusException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, username));
+                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
 
         assertTrue(exception.getMessage().contains("Model not found"));
     }
@@ -490,24 +490,21 @@ class RsuManagementServiceTest {
     void testModifyRsu_InvalidModelFormat() throws UnknownHostException {
         String rsuIp = "192.168.1.100";
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
-        String username = "testuser@example.com";
 
         RsuPatch patch = new RsuPatch();
         patch.setModel("InvalidFormat");
 
         Rsu existingRsu = new Rsu();
-        existingRsu.setRsuOrganizations(new ArrayList<>());
+        existingRsu.setRsuOrganizations(new HashSet<>());
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
 
         ResponseStatusException exception = assertThrows(
                 ResponseStatusException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, username));
+                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
 
         assertTrue(exception.getMessage().contains("Invalid model format"));
     }
-
-    // Add these tests to RsuManagementServiceTest.java
 
     // ==================== HANDLE ORGANIZATION CHANGES TESTS ====================
 
@@ -515,533 +512,376 @@ class RsuManagementServiceTest {
     void testHandleOrganizationChanges_AddOrganizations_Success() throws UnknownHostException {
         String rsuIp = "192.168.1.100";
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
-        String username = "testuser@example.com";
 
         RsuPatch patch = new RsuPatch();
         patch.setOrganizationsToAdd(Arrays.asList("Org1", "Org2"));
 
-    Rsu existingRsu = new Rsu();
-    existingRsu.setIpv4Address(inetAddress);
-    existingRsu.setRsuOrganizations(new ArrayList<>());
-
-    Organization org1 = new Organization();
-    org1.setName("Org1");
-    Organization org2 = new Organization();
-    org2.setName("Org2");
-
-    List<String> authorizedOrgs = Arrays.asList("Org1", "Org2", "Org3");
-
-    when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-    when(rsuRepository.existsByIpAndOrganizations(inetAddress, List.of("Org1")))
-            .thenReturn(false);
-    when(rsuRepository.existsByIpAndOrganizations(inetAddress, List.of("Org2")))
-            .thenReturn(false);
-    when(organizationRepository.findByName("Org1")).thenReturn(Optional.of(org1));
-    when(organizationRepository.findByName("Org2")).thenReturn(Optional.of(org2));
-    when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
-    when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-    when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(authorizedOrgs);
-
-    rsuManagementService.modifyRsu(rsuIp, patch, username);
-
-    verify(rsuOrganizationRepository, times(2)).save(any(RsuOrganization.class));
-    verify(organizationRepository).findByName("Org1");
-    verify(organizationRepository).findByName("Org2");
-}
-
-@Test
-void testHandleOrganizationChanges_AddOrganizations_AlreadyExists() throws UnknownHostException {
-    String rsuIp = "192.168.1.100";
-    InetAddress inetAddress = InetAddress.getByName(rsuIp);
-    String username = "testuser@example.com";
-
-    RsuPatch patch = new RsuPatch();
-    patch.setOrganizationsToAdd(Arrays.asList("Org1"));
-
-    Rsu existingRsu = new Rsu();
-    existingRsu.setIpv4Address(inetAddress);
-    existingRsu.setRsuOrganizations(new ArrayList<>());
-
-    List<String> authorizedOrgs = Arrays.asList("Org1");
-
-    when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-    when(rsuRepository.existsByIpAndOrganizations(inetAddress, List.of("Org1")))
-            .thenReturn(true);
-    when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
-    when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-    when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(authorizedOrgs);
-
-    rsuManagementService.modifyRsu(rsuIp, patch, username);
-
-    verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
-    verify(organizationRepository, never()).findByName(anyString());
-}
-
-@Test
-void testHandleOrganizationChanges_AddOrganizations_Unauthorized() throws UnknownHostException {
-    String rsuIp = "192.168.1.100";
-    InetAddress inetAddress = InetAddress.getByName(rsuIp);
-    String username = "testuser@example.com";
-
-    RsuPatch patch = new RsuPatch();
-    patch.setOrganizationsToAdd(Arrays.asList("UnauthorizedOrg"));
-
-    Rsu existingRsu = new Rsu();
-    existingRsu.setIpv4Address(inetAddress);
-    existingRsu.setRsuOrganizations(new ArrayList<>());
-
-    List<String> authorizedOrgs = Arrays.asList("Org1", "Org2");
-
-    when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-    when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(authorizedOrgs);
-
-    ResponseStatusException exception = assertThrows(
-                    ResponseStatusException.class,
-            () -> rsuManagementService.modifyRsu(rsuIp, patch, username));
-
-    assertEquals(HttpStatus.FORBIDDEN, exception.getStatusCode());
-    assertTrue(exception.getMessage().contains("User does not have permission to add RSU to organization(s)"));
-    assertTrue(exception.getMessage().contains("UnauthorizedOrg"));
-    verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
-}
-
-@Test
-void testHandleOrganizationChanges_AddOrganizations_OrganizationNotFound() throws UnknownHostException {
-    String rsuIp = "192.168.1.100";
-    InetAddress inetAddress = InetAddress.getByName(rsuIp);
-    String username = "testuser@example.com";
-
-    RsuPatch patch = new RsuPatch();
-    patch.setOrganizationsToAdd(Arrays.asList("NonExistentOrg"));
-
-    Rsu existingRsu = new Rsu();
-    existingRsu.setIpv4Address(inetAddress);
-    existingRsu.setRsuOrganizations(new ArrayList<>());
-
-    List<String> authorizedOrgs = Arrays.asList("NonExistentOrg");
-
-    when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-    when(rsuRepository.existsByIpAndOrganizations(inetAddress, List.of("NonExistentOrg")))
-            .thenReturn(false);
-    when(organizationRepository.findByName("NonExistentOrg")).thenReturn(Optional.empty());
-    when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(authorizedOrgs);
-
-    ResponseStatusException exception = assertThrows(
-                    ResponseStatusException.class,
-            () -> rsuManagementService.modifyRsu(rsuIp, patch, username));
-
-    assertEquals(HttpStatus.BAD_REQUEST, exception.getStatusCode());
-    assertTrue(exception.getMessage().contains("Organization not found: NonExistentOrg"));
-    verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
-}
-
-@Test
-void testHandleOrganizationChanges_RemoveOrganizations_Success() throws UnknownHostException {
-    String rsuIp = "192.168.1.100";
-    InetAddress inetAddress = InetAddress.getByName(rsuIp);
-    String username = "testuser@example.com";
-
-    RsuPatch patch = new RsuPatch();
-    patch.setOrganizationsToRemove(Arrays.asList("Org1", "Org2"));
-
-    Rsu existingRsu = new Rsu();
-    existingRsu.setIpv4Address(inetAddress);
-    existingRsu.setRsuOrganizations(new ArrayList<>());
-
-    Organization org1 = new Organization();
-    org1.setName("Org1");
-    Organization org2 = new Organization();
-    org2.setName("Org2");
-
-    RsuOrganization rsuOrg1 = new RsuOrganization();
-    rsuOrg1.setRsu(existingRsu);
-    rsuOrg1.setOrganization(org1);
-
-    RsuOrganization rsuOrg2 = new RsuOrganization();
-    rsuOrg2.setRsu(existingRsu);
-    rsuOrg2.setOrganization(org2);
-
-    List<String> authorizedOrgs = Arrays.asList("Org1", "Org2", "Org3");
-
-    when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-    when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization_Name(inetAddress, "Org1"))
-            .thenReturn(Optional.of(rsuOrg1));
-    when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization_Name(inetAddress, "Org2"))
-            .thenReturn(Optional.of(rsuOrg2));
-    when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
-    when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-    when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(authorizedOrgs);
-
-    rsuManagementService.modifyRsu(rsuIp, patch, username);
-
-    verify(rsuOrganizationRepository).delete(rsuOrg1);
-    verify(rsuOrganizationRepository).delete(rsuOrg2);
-}
-
-@Test
-void testHandleOrganizationChanges_RemoveOrganizations_NotFound() throws UnknownHostException {
-    String rsuIp = "192.168.1.100";
-    InetAddress inetAddress = InetAddress.getByName(rsuIp);
-    String username = "testuser@example.com";
-
-    RsuPatch patch = new RsuPatch();
-    patch.setOrganizationsToRemove(Arrays.asList("Org1"));
-
-    Rsu existingRsu = new Rsu();
-    existingRsu.setIpv4Address(inetAddress);
-    existingRsu.setRsuOrganizations(new ArrayList<>());
-
-    List<String> authorizedOrgs = Arrays.asList("Org1");
-
-    when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-    when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization_Name(inetAddress, "Org1"))
-            .thenReturn(Optional.empty());
-    when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
-    when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-    when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(authorizedOrgs);
-
-    rsuManagementService.modifyRsu(rsuIp, patch, username);
-
-    verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
-}
-
-@Test
-void testHandleOrganizationChanges_RemoveOrganizations_Unauthorized() throws UnknownHostException {
-    String rsuIp = "192.168.1.100";
-    InetAddress inetAddress = InetAddress.getByName(rsuIp);
-    String username = "testuser@example.com";
-
-    RsuPatch patch = new RsuPatch();
-    patch.setOrganizationsToRemove(Arrays.asList("UnauthorizedOrg"));
-
-    Rsu existingRsu = new Rsu();
-    existingRsu.setIpv4Address(inetAddress);
-    existingRsu.setRsuOrganizations(new ArrayList<>());
-
-    List<String> authorizedOrgs = Arrays.asList("Org1", "Org2");
-
-    when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-    when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(authorizedOrgs);
-
-    ResponseStatusException exception = assertThrows(
-            ResponseStatusException.class,
-            () -> rsuManagementService.modifyRsu(rsuIp, patch, username));
-
-    assertEquals(HttpStatus.FORBIDDEN, exception.getStatusCode());
-    assertTrue(exception.getMessage().contains("User does not have permission to remove RSU from organization(s)"));
-    assertTrue(exception.getMessage().contains("UnauthorizedOrg"));
-    verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
-}
-
-@Test
-void testHandleOrganizationChanges_AddAndRemoveOrganizations() throws UnknownHostException {
-    String rsuIp = "192.168.1.100";
-    InetAddress inetAddress = InetAddress.getByName(rsuIp);
-    String username = "testuser@example.com";
-
-    RsuPatch patch = new RsuPatch();
-    patch.setOrganizationsToAdd(Arrays.asList("NewOrg"));
-    patch.setOrganizationsToRemove(Arrays.asList("OldOrg"));
-
-    Rsu existingRsu = new Rsu();
-    existingRsu.setIpv4Address(inetAddress);
-    existingRsu.setRsuOrganizations(new ArrayList<>());
-
-    Organization newOrg = new Organization();
-    newOrg.setName("NewOrg");
-    Organization oldOrg = new Organization();
-    oldOrg.setName("OldOrg");
-
-    RsuOrganization rsuOrgToRemove = new RsuOrganization();
-    rsuOrgToRemove.setRsu(existingRsu);
-    rsuOrgToRemove.setOrganization(oldOrg);
-
-    List<String> authorizedOrgs = Arrays.asList("NewOrg", "OldOrg");
-
-    when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-    when(rsuRepository.existsByIpAndOrganizations(inetAddress, List.of("NewOrg")))
-            .thenReturn(false);
-    when(organizationRepository.findByName("NewOrg")).thenReturn(Optional.of(newOrg));
-    when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization_Name(inetAddress, "OldOrg"))
-            .thenReturn(Optional.of(rsuOrgToRemove));
-    when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
-    when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-    when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(authorizedOrgs);
-
-    rsuManagementService.modifyRsu(rsuIp, patch, username);
-
-    verify(rsuOrganizationRepository).save(any(RsuOrganization.class));
-    verify(rsuOrganizationRepository).delete(rsuOrgToRemove);
-}
-
-@Test
-void testHandleOrganizationChanges_AddMultipleOrganizations_PartiallyUnauthorized() throws UnknownHostException {
-    String rsuIp = "192.168.1.100";
-    InetAddress inetAddress = InetAddress.getByName(rsuIp);
-    String username = "testuser@example.com";
-
-    RsuPatch patch = new RsuPatch();
-    patch.setOrganizationsToAdd(Arrays.asList("Org1", "UnauthorizedOrg1", "UnauthorizedOrg2"));
-
-    Rsu existingRsu = new Rsu();
-    existingRsu.setIpv4Address(inetAddress);
-    existingRsu.setRsuOrganizations(new ArrayList<>());
-
-    List<String> authorizedOrgs = Arrays.asList("Org1");
-
-    when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-    when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(authorizedOrgs);
-
-    ResponseStatusException exception = assertThrows(
-                    ResponseStatusException.class,
-            () -> rsuManagementService.modifyRsu(rsuIp, patch, username));
-
-    assertEquals(HttpStatus.FORBIDDEN, exception.getStatusCode());
-    assertTrue(exception.getMessage().contains("UnauthorizedOrg1"));
-    assertTrue(exception.getMessage().contains("UnauthorizedOrg2"));
-    verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
-}
-
-@Test
-void testHandleOrganizationChanges_RemoveMultipleOrganizations_PartiallyUnauthorized() throws UnknownHostException {
-    String rsuIp = "192.168.1.100";
-    InetAddress inetAddress = InetAddress.getByName(rsuIp);
-    String username = "testuser@example.com";
-
-    RsuPatch patch = new RsuPatch();
-    patch.setOrganizationsToRemove(Arrays.asList("Org1", "UnauthorizedOrg1", "UnauthorizedOrg2"));
-
-    Rsu existingRsu = new Rsu();
-    existingRsu.setIpv4Address(inetAddress);
-    existingRsu.setRsuOrganizations(new ArrayList<>());
-
-    List<String> authorizedOrgs = Arrays.asList("Org1");
-
-    when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-    when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(authorizedOrgs);
-
-    ResponseStatusException exception = assertThrows(
-                    ResponseStatusException.class,
-            () -> rsuManagementService.modifyRsu(rsuIp, patch, username));
-
-    assertEquals(HttpStatus.FORBIDDEN, exception.getStatusCode());
-    assertTrue(exception.getMessage().contains("UnauthorizedOrg1"));
-    assertTrue(exception.getMessage().contains("UnauthorizedOrg2"));
-    verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
-}
-
-@Test
-void testHandleOrganizationChanges_NoOrganizationChanges() throws UnknownHostException {
-    String rsuIp = "192.168.1.100";
-    InetAddress inetAddress = InetAddress.getByName(rsuIp);
-    String username = "testuser@example.com";
-
-    RsuPatch patch = new RsuPatch();
-    // No organization changes
-
-    Rsu existingRsu = new Rsu();
-    existingRsu.setIpv4Address(inetAddress);
-    existingRsu.setRsuOrganizations(new ArrayList<>());
-
-    when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-    when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
-    when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-    when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(List.of());
-
-    rsuManagementService.modifyRsu(rsuIp, patch, username);
-
-    verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
-    verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
-}
-
-@Test
-void testHandleOrganizationChanges_EmptyAddList() throws UnknownHostException {
-    String rsuIp = "192.168.1.100";
-    InetAddress inetAddress = InetAddress.getByName(rsuIp);
-    String username = "testuser@example.com";
-
-    RsuPatch patch = new RsuPatch();
-    patch.setOrganizationsToAdd(List.of());
-
-    Rsu existingRsu = new Rsu();
-    existingRsu.setIpv4Address(inetAddress);
-    existingRsu.setRsuOrganizations(new ArrayList<>());
-
-    when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-    when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
-    when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-    when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(List.of());
-
-    rsuManagementService.modifyRsu(rsuIp, patch, username);
-
-    verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
-}
-
-@Test
-void testHandleOrganizationChanges_EmptyRemoveList() throws UnknownHostException {
-    String rsuIp = "192.168.1.100";
-    InetAddress inetAddress = InetAddress.getByName(rsuIp);
-    String username = "testuser@example.com";
-
-    RsuPatch patch = new RsuPatch();
-    patch.setOrganizationsToRemove(List.of());
-
-    Rsu existingRsu = new Rsu();
-    existingRsu.setIpv4Address(inetAddress);
-    existingRsu.setRsuOrganizations(new ArrayList<>());
-
-    when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-    when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
-    when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-    when(permissionService.getQualifiedOrgList(username, "ADMIN")).thenReturn(List.of());
-
-    rsuManagementService.modifyRsu(rsuIp, patch, username);
-
-    verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
-}
-
-
-    // ==================== DELETE RSU TESTS ====================
+        Rsu existingRsu = new Rsu();
+        existingRsu.setIpv4Address(inetAddress);
+        existingRsu.setRsuOrganizations(new HashSet<>());
+
+        Organization org1 = new Organization();
+        org1.setName("Org1");
+        Organization org2 = new Organization();
+        org2.setName("Org2");
+
+        List<String> authorizedOrgs = Arrays.asList("Org1", "Org2", "Org3");
+
+        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
+        when(rsuRepository.existsByIpAndOrganizations(inetAddress, List.of("Org1")))
+                .thenReturn(false);
+        when(rsuRepository.existsByIpAndOrganizations(inetAddress, List.of("Org2")))
+                .thenReturn(false);
+        when(organizationRepository.findByName("Org1")).thenReturn(Optional.of(org1));
+        when(organizationRepository.findByName("Org2")).thenReturn(Optional.of(org2));
+        when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
+        when(rsuMapper.toDto(existingRsu)).thenReturn(null);
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(authorizedOrgs);
+
+        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+
+        verify(rsuOrganizationRepository, times(2)).save(any(RsuOrganization.class));
+        verify(organizationRepository).findByName("Org1");
+        verify(organizationRepository).findByName("Org2");
+    }
 
     @Test
-    void testDeleteRsuByIpv4Address_Success() throws UnknownHostException {
+    void testHandleOrganizationChanges_AddOrganizations_AlreadyExists() throws UnknownHostException {
         String rsuIp = "192.168.1.100";
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
-        doReturn(new Rsu()).when(rsuRepository).findByIpv4Address(any());
-        doNothing().when(pingRepository).removePingByIpv4Address(inetAddress);
-        doNothing().when(rsuOrganizationRepository).removeRsuOrganizationByIpv4Address(inetAddress);
-        doNothing().when(scmsHealthRepository).removeScmsHealthByIpv4Address(inetAddress);
-        doNothing().when(snmpMsgfwdConfigRepository).removeSnmpMsgfwdConfigByIpv4Address(inetAddress);
-        doNothing().when(rsuRepository).removeRsuByIpv4Address(inetAddress);
-        doNothing().when(rsuIntersectionRepository).removeRsuIntersectionByIpv4Address(inetAddress);
-        doNothing().when(consecutiveFirmwareUpgradeFailureRepository)
-                .removeConsecutiveFirmwareUpgradeFailureByIpv4Address(inetAddress);
-        doNothing().when(maxRetryLimitReachedInstanceRepository)
-                .removeMaxRetryLimitReachedInstanceByIpv4Address(inetAddress);
+        RsuPatch patch = new RsuPatch();
+        patch.setOrganizationsToAdd(Arrays.asList("Org1"));
 
-        rsuManagementService.deleteRsuByIpv4Address(rsuIp);
+        Rsu existingRsu = new Rsu();
+        existingRsu.setIpv4Address(inetAddress);
+        existingRsu.setRsuOrganizations(new HashSet<>());
 
-        verify(pingRepository).removePingByIpv4Address(inetAddress);
-        verify(rsuOrganizationRepository).removeRsuOrganizationByIpv4Address(inetAddress);
-        verify(scmsHealthRepository).removeScmsHealthByIpv4Address(inetAddress);
-        verify(snmpMsgfwdConfigRepository).removeSnmpMsgfwdConfigByIpv4Address(inetAddress);
-        verify(rsuIntersectionRepository).removeRsuIntersectionByIpv4Address(inetAddress);
-        verify(consecutiveFirmwareUpgradeFailureRepository)
-                .removeConsecutiveFirmwareUpgradeFailureByIpv4Address(inetAddress);
-        verify(maxRetryLimitReachedInstanceRepository).removeMaxRetryLimitReachedInstanceByIpv4Address(inetAddress);
-        verify(rsuRepository).removeRsuByIpv4Address(inetAddress);
+        List<String> authorizedOrgs = Arrays.asList("Org1");
+
+        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
+        when(rsuRepository.existsByIpAndOrganizations(inetAddress, List.of("Org1")))
+                .thenReturn(true);
+        when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
+        when(rsuMapper.toDto(existingRsu)).thenReturn(null);
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(authorizedOrgs);
+
+        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+
+        verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
+        verify(organizationRepository, never()).findByName(anyString());
     }
 
     @Test
-    void testDeleteRsuByIpv4Address_InvalidIpAddress() {
-        String invalidIp = "invalid-ip";
+    void testHandleOrganizationChanges_AddOrganizations_Unauthorized() throws UnknownHostException {
+        String rsuIp = "192.168.1.100";
+        InetAddress inetAddress = InetAddress.getByName(rsuIp);
+
+        RsuPatch patch = new RsuPatch();
+        patch.setOrganizationsToAdd(Arrays.asList("UnauthorizedOrg"));
+
+        Rsu existingRsu = new Rsu();
+        existingRsu.setIpv4Address(inetAddress);
+        existingRsu.setRsuOrganizations(new HashSet<>());
+
+        List<String> authorizedOrgs = Arrays.asList("Org1", "Org2");
+
+        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(authorizedOrgs);
 
         ResponseStatusException exception = assertThrows(
                 ResponseStatusException.class,
-                () -> rsuManagementService.deleteRsuByIpv4Address(invalidIp));
+                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
 
-        assertTrue(exception.getMessage().contains("Invalid IP address"));
-        verify(rsuRepository, never()).removeRsuByIpv4Address(any());
-    }
-
-    // ==================== DELETE MULTIPLE RSUS TESTS ====================
-
-    @Test
-    void testDeleteMultipleRsusByIpv4Address_Success() throws UnknownHostException {
-        List<String> rsuIps = Arrays.asList("192.168.1.100", "192.168.1.101", "192.168.1.102");
-
-        doReturn(List.of(new Rsu(), new Rsu(), new Rsu())).when(rsuRepository).findByIpv4AddressIn(anyList());
-        doNothing().when(pingRepository).removeMultiplePingsByIpv4Address(anyList());
-        doNothing().when(rsuOrganizationRepository).removeMultipleRsuOrganizationsByIpv4Address(anyList());
-        doNothing().when(scmsHealthRepository).removeMultipleScmsHealthByIpv4Address(anyList());
-        doNothing().when(snmpMsgfwdConfigRepository).removeMultipleSnmpMsgfwdConfigByIpv4Address(anyList());
-        doNothing().when(rsuIntersectionRepository).removeMultipleRsuIntersectionsByIpv4Address(anyList());
-        doNothing().when(consecutiveFirmwareUpgradeFailureRepository)
-                .removeMultipleConsecutiveFirmwareUpgradeFailuresByIpv4Address(anyList());
-        doNothing().when(maxRetryLimitReachedInstanceRepository)
-                .removeMultipleMaxRetryLimitReachedInstancesByIpv4Address(anyList());
-        doNothing().when(rsuRepository).removeByIpv4AddressIn(anyList());
-
-        rsuManagementService.deleteMultipleRsusByIpv4Address(rsuIps);
-
-        verify(pingRepository).removeMultiplePingsByIpv4Address(anyList());
-        verify(rsuIntersectionRepository).removeMultipleRsuIntersectionsByIpv4Address(anyList());
-        verify(rsuOrganizationRepository).removeMultipleRsuOrganizationsByIpv4Address(anyList());
-        verify(maxRetryLimitReachedInstanceRepository)
-                .removeMultipleMaxRetryLimitReachedInstancesByIpv4Address(anyList());
-        verify(scmsHealthRepository).removeMultipleScmsHealthByIpv4Address(anyList());
-        verify(consecutiveFirmwareUpgradeFailureRepository)
-                .removeMultipleConsecutiveFirmwareUpgradeFailuresByIpv4Address(anyList());
-        verify(snmpMsgfwdConfigRepository).removeMultipleSnmpMsgfwdConfigByIpv4Address(anyList());
-        verify(rsuRepository).removeByIpv4AddressIn(anyList());
+        assertEquals(HttpStatus.FORBIDDEN, exception.getStatusCode());
+        assertTrue(exception.getMessage().contains("User does not have permission to add RSU to organization(s)"));
+        assertTrue(exception.getMessage().contains("UnauthorizedOrg"));
+        verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
     }
 
     @Test
-    void testDeleteMultipleRsusByIpv4Address_NotFound() throws UnknownHostException {
-        List<String> rsuIps = Arrays.asList("192.168.1.100", "192.168.1.101", "192.168.1.102");
-        Rsu rsu = new Rsu();
-        rsu.setIpv4Address(InetAddress.getByName("192.168.1.100"));
+    void testHandleOrganizationChanges_AddOrganizations_OrganizationNotFound() throws UnknownHostException {
+        String rsuIp = "192.168.1.100";
+        InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
-        doReturn(List.of(rsu)).when(rsuRepository).findByIpv4AddressIn(anyList());
+        RsuPatch patch = new RsuPatch();
+        patch.setOrganizationsToAdd(Arrays.asList("NonExistentOrg"));
+
+        Rsu existingRsu = new Rsu();
+        existingRsu.setIpv4Address(inetAddress);
+        existingRsu.setRsuOrganizations(new HashSet<>());
+
+        List<String> authorizedOrgs = Arrays.asList("NonExistentOrg");
+
+        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
+        when(rsuRepository.existsByIpAndOrganizations(inetAddress, List.of("NonExistentOrg")))
+                .thenReturn(false);
+        when(organizationRepository.findByName("NonExistentOrg")).thenReturn(Optional.empty());
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(authorizedOrgs);
 
         ResponseStatusException exception = assertThrows(
                 ResponseStatusException.class,
-                () -> rsuManagementService.deleteMultipleRsusByIpv4Address(rsuIps));
+                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
 
-        assertTrue(exception.getMessage().contains("RSU(s) not found with IP(s): 192.168.1.101, 192.168.1.102"));
-        assertEquals(HttpStatus.NOT_FOUND, exception.getStatusCode());
-
-        verify(rsuRepository, never()).removeByIpv4AddressIn(anyList());
-    }
-
-    @Test
-    void testDeleteMultipleRsusByIpv4Address_EmptyList() {
-        List<String> emptyList = Arrays.asList();
-
-        doReturn(List.of()).when(rsuRepository).findByIpv4AddressIn(anyList());
-
-        ResponseStatusException exception = assertThrows(
-                ResponseStatusException.class,
-                () -> rsuManagementService.deleteMultipleRsusByIpv4Address(emptyList));
-
-        assertTrue(exception.getMessage().contains("No valid RSU IP addresses provided"));
         assertEquals(HttpStatus.BAD_REQUEST, exception.getStatusCode());
-
-        verify(rsuRepository, never()).removeByIpv4AddressIn(anyList());
+        assertTrue(exception.getMessage().contains("Organization not found: NonExistentOrg"));
+        verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
     }
 
     @Test
-    void testDeleteMultipleRsusByIpv4Address_InvalidIpInList() {
-        List<String> rsuIps = Arrays.asList("192.168.1.100", "invalid-ip", "192.168.1.101");
+    void testHandleOrganizationChanges_RemoveOrganizations_Success() throws UnknownHostException {
+        String rsuIp = "192.168.1.100";
+        InetAddress inetAddress = InetAddress.getByName(rsuIp);
+
+        RsuPatch patch = new RsuPatch();
+        patch.setOrganizationsToRemove(Arrays.asList("Org1", "Org2"));
+
+        Rsu existingRsu = new Rsu();
+        existingRsu.setIpv4Address(inetAddress);
+        existingRsu.setRsuOrganizations(new HashSet<>());
+
+        Organization org1 = new Organization();
+        org1.setName("Org1");
+        Organization org2 = new Organization();
+        org2.setName("Org2");
+
+        RsuOrganization rsuOrg1 = new RsuOrganization();
+        rsuOrg1.setRsu(existingRsu);
+        rsuOrg1.setOrganization(org1);
+
+        RsuOrganization rsuOrg2 = new RsuOrganization();
+        rsuOrg2.setRsu(existingRsu);
+        rsuOrg2.setOrganization(org2);
+
+        List<String> authorizedOrgs = Arrays.asList("Org1", "Org2", "Org3");
+
+        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
+        when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization_Name(inetAddress, "Org1"))
+                .thenReturn(Optional.of(rsuOrg1));
+        when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization_Name(inetAddress, "Org2"))
+                .thenReturn(Optional.of(rsuOrg2));
+        when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
+        when(rsuMapper.toDto(existingRsu)).thenReturn(null);
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(authorizedOrgs);
+
+        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+
+        verify(rsuOrganizationRepository).delete(rsuOrg1);
+        verify(rsuOrganizationRepository).delete(rsuOrg2);
+    }
+
+    @Test
+    void testHandleOrganizationChanges_RemoveOrganizations_NotFound() throws UnknownHostException {
+        String rsuIp = "192.168.1.100";
+        InetAddress inetAddress = InetAddress.getByName(rsuIp);
+
+        RsuPatch patch = new RsuPatch();
+        patch.setOrganizationsToRemove(Arrays.asList("Org1"));
+
+        Rsu existingRsu = new Rsu();
+        existingRsu.setIpv4Address(inetAddress);
+        existingRsu.setRsuOrganizations(new HashSet<>());
+
+        List<String> authorizedOrgs = Arrays.asList("Org1");
+
+        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
+        when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization_Name(inetAddress, "Org1"))
+                .thenReturn(Optional.empty());
+        when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
+        when(rsuMapper.toDto(existingRsu)).thenReturn(null);
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(authorizedOrgs);
+
+        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+
+        verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
+    }
+
+    @Test
+    void testHandleOrganizationChanges_RemoveOrganizations_Unauthorized() throws UnknownHostException {
+        String rsuIp = "192.168.1.100";
+        InetAddress inetAddress = InetAddress.getByName(rsuIp);
+
+        RsuPatch patch = new RsuPatch();
+        patch.setOrganizationsToRemove(Arrays.asList("UnauthorizedOrg"));
+
+        Rsu existingRsu = new Rsu();
+        existingRsu.setIpv4Address(inetAddress);
+        existingRsu.setRsuOrganizations(new HashSet<>());
+
+        List<String> authorizedOrgs = Arrays.asList("Org1", "Org2");
+
+        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(authorizedOrgs);
 
         ResponseStatusException exception = assertThrows(
                 ResponseStatusException.class,
-                () -> rsuManagementService.deleteMultipleRsusByIpv4Address(rsuIps));
+                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
 
-        assertTrue(exception.getMessage().contains("Invalid IP address"));
-        verify(rsuRepository, never()).removeByIpv4AddressIn(anyList());
+        assertEquals(HttpStatus.FORBIDDEN, exception.getStatusCode());
+        assertTrue(exception.getMessage().contains("User does not have permission to remove RSU from organization(s)"));
+        assertTrue(exception.getMessage().contains("UnauthorizedOrg"));
+        verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
     }
 
     @Test
-    void testDeleteMultipleRsusByIpv4Address_SingleRsu() {
-        List<String> rsuIps = Arrays.asList("192.168.1.100");
+    void testHandleOrganizationChanges_AddAndRemoveOrganizations() throws UnknownHostException {
+        String rsuIp = "192.168.1.100";
+        InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
-        doReturn(List.of(new Rsu())).when(rsuRepository).findByIpv4AddressIn(anyList());
-        doNothing().when(pingRepository).removeMultiplePingsByIpv4Address(anyList());
-        doNothing().when(rsuOrganizationRepository).removeMultipleRsuOrganizationsByIpv4Address(anyList());
-        doNothing().when(scmsHealthRepository).removeMultipleScmsHealthByIpv4Address(anyList());
-        doNothing().when(snmpMsgfwdConfigRepository).removeMultipleSnmpMsgfwdConfigByIpv4Address(anyList());
-        doNothing().when(rsuIntersectionRepository).removeMultipleRsuIntersectionsByIpv4Address(anyList());
-        doNothing().when(consecutiveFirmwareUpgradeFailureRepository)
-                .removeMultipleConsecutiveFirmwareUpgradeFailuresByIpv4Address(anyList());
-        doNothing().when(maxRetryLimitReachedInstanceRepository)
-                .removeMultipleMaxRetryLimitReachedInstancesByIpv4Address(anyList());
-        doNothing().when(rsuRepository).removeByIpv4AddressIn(anyList());
+        RsuPatch patch = new RsuPatch();
+        patch.setOrganizationsToAdd(Arrays.asList("NewOrg"));
+        patch.setOrganizationsToRemove(Arrays.asList("OldOrg"));
 
-        rsuManagementService.deleteMultipleRsusByIpv4Address(rsuIps);
+        Rsu existingRsu = new Rsu();
+        existingRsu.setIpv4Address(inetAddress);
+        existingRsu.setRsuOrganizations(new HashSet<>());
 
-        verify(rsuRepository).removeByIpv4AddressIn(anyList());
+        Organization newOrg = new Organization();
+        newOrg.setName("NewOrg");
+        Organization oldOrg = new Organization();
+        oldOrg.setName("OldOrg");
+
+        RsuOrganization rsuOrgToRemove = new RsuOrganization();
+        rsuOrgToRemove.setRsu(existingRsu);
+        rsuOrgToRemove.setOrganization(oldOrg);
+
+        List<String> authorizedOrgs = Arrays.asList("NewOrg", "OldOrg");
+
+        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
+        when(rsuRepository.existsByIpAndOrganizations(inetAddress, List.of("NewOrg")))
+                .thenReturn(false);
+        when(organizationRepository.findByName("NewOrg")).thenReturn(Optional.of(newOrg));
+        when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization_Name(inetAddress, "OldOrg"))
+                .thenReturn(Optional.of(rsuOrgToRemove));
+        when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
+        when(rsuMapper.toDto(existingRsu)).thenReturn(null);
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(authorizedOrgs);
+
+        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+
+        verify(rsuOrganizationRepository).save(any(RsuOrganization.class));
+        verify(rsuOrganizationRepository).delete(rsuOrgToRemove);
+    }
+
+    @Test
+    void testHandleOrganizationChanges_AddMultipleOrganizations_PartiallyUnauthorized() throws UnknownHostException {
+        String rsuIp = "192.168.1.100";
+        InetAddress inetAddress = InetAddress.getByName(rsuIp);
+
+        RsuPatch patch = new RsuPatch();
+        patch.setOrganizationsToAdd(Arrays.asList("Org1", "UnauthorizedOrg1", "UnauthorizedOrg2"));
+
+        Rsu existingRsu = new Rsu();
+        existingRsu.setIpv4Address(inetAddress);
+        existingRsu.setRsuOrganizations(new HashSet<>());
+
+        List<String> authorizedOrgs = Arrays.asList("Org1");
+
+        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(authorizedOrgs);
+
+        ResponseStatusException exception = assertThrows(
+                ResponseStatusException.class,
+                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
+
+        assertEquals(HttpStatus.FORBIDDEN, exception.getStatusCode());
+        assertTrue(exception.getMessage().contains("UnauthorizedOrg1"));
+        assertTrue(exception.getMessage().contains("UnauthorizedOrg2"));
+        verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
+    }
+
+    @Test
+    void testHandleOrganizationChanges_RemoveMultipleOrganizations_PartiallyUnauthorized() throws UnknownHostException {
+        String rsuIp = "192.168.1.100";
+        InetAddress inetAddress = InetAddress.getByName(rsuIp);
+
+        RsuPatch patch = new RsuPatch();
+        patch.setOrganizationsToRemove(Arrays.asList("Org1", "UnauthorizedOrg1", "UnauthorizedOrg2"));
+
+        Rsu existingRsu = new Rsu();
+        existingRsu.setIpv4Address(inetAddress);
+        existingRsu.setRsuOrganizations(new HashSet<>());
+
+        List<String> authorizedOrgs = Arrays.asList("Org1");
+
+        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(authorizedOrgs);
+
+        ResponseStatusException exception = assertThrows(
+                ResponseStatusException.class,
+                () -> rsuManagementService.modifyRsu(rsuIp, patch, authToken));
+
+        assertEquals(HttpStatus.FORBIDDEN, exception.getStatusCode());
+        assertTrue(exception.getMessage().contains("UnauthorizedOrg1"));
+        assertTrue(exception.getMessage().contains("UnauthorizedOrg2"));
+        verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
+    }
+
+    @Test
+    void testHandleOrganizationChanges_NoOrganizationChanges() throws UnknownHostException {
+        String rsuIp = "192.168.1.100";
+        InetAddress inetAddress = InetAddress.getByName(rsuIp);
+
+        RsuPatch patch = new RsuPatch();
+        // No organization changes
+
+        Rsu existingRsu = new Rsu();
+        existingRsu.setIpv4Address(inetAddress);
+        existingRsu.setRsuOrganizations(new HashSet<>());
+
+        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
+        when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
+        when(rsuMapper.toDto(existingRsu)).thenReturn(null);
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(List.of());
+
+        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+
+        verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
+        verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
+    }
+
+    @Test
+    void testHandleOrganizationChanges_EmptyAddList() throws UnknownHostException {
+        String rsuIp = "192.168.1.100";
+        InetAddress inetAddress = InetAddress.getByName(rsuIp);
+
+        RsuPatch patch = new RsuPatch();
+        patch.setOrganizationsToAdd(List.of());
+
+        Rsu existingRsu = new Rsu();
+        existingRsu.setIpv4Address(inetAddress);
+        existingRsu.setRsuOrganizations(new HashSet<>());
+
+        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
+        when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
+        when(rsuMapper.toDto(existingRsu)).thenReturn(null);
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(List.of());
+
+        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+
+        verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
+    }
+
+    @Test
+    void testHandleOrganizationChanges_EmptyRemoveList() throws UnknownHostException {
+        String rsuIp = "192.168.1.100";
+        InetAddress inetAddress = InetAddress.getByName(rsuIp);
+
+        RsuPatch patch = new RsuPatch();
+        patch.setOrganizationsToRemove(List.of());
+
+        Rsu existingRsu = new Rsu();
+        existingRsu.setIpv4Address(inetAddress);
+        existingRsu.setRsuOrganizations(new HashSet<>());
+
+        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
+        when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
+        when(rsuMapper.toDto(existingRsu)).thenReturn(null);
+        when(authToken.getQualifiedOrgList("ADMIN")).thenReturn(List.of());
+
+        rsuManagementService.modifyRsu(rsuIp, patch, authToken);
+
+        verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
     }
 
     // ==================== HELPER METHODS ====================
@@ -1056,25 +896,6 @@ void testHandleOrganizationChanges_EmptyRemoveList() throws UnknownHostException
             @Override
             public String getModel() {
                 return model;
-            }
-        };
-    }
-
-    private UserRepository.UserOrgRoleProjection createUserOrgRoleProjection(String email, String org, String role) {
-        return new UserRepository.UserOrgRoleProjection() {
-            @Override
-            public String getEmail() {
-                return email;
-            }
-
-            @Override
-            public String getOrganizationName() {
-                return org;
-            }
-
-            @Override
-            public String getRoleName() {
-                return role;
             }
         };
     }
